# asteroid-arena-3d

./: .gitignore  CMakeLists.txt  README.md  stb_image.h
ecs/: component.h  constants.h  data_manager.h  entity.h  manager.h  test.cpp  transform.h  vector3d.cpp  vector3d.h
files/models/ship/: ship.mtl
main/: camera.cpp  camera.h  config.cpp  config.h  draw_ico.h  draw_sphere.h  game_camera.cpp  game_camera.h  game_init.cpp  game_init.h  game_window.cpp  game_window.h  global.cpp  global.h  graphics.h  main.cpp
math/: game_math.h  math.h  point2d.cpp  point2d.h  point3d.cpp  point3d.h  quaternion.cpp  quaternion.h  vector3d.cpp  vector3d.h
objects/: asteroid.cpp  asteroid.h  game_arena.cpp  game_arena.h  game_object.cpp  game_object.h  particle.cpp  particle.h  spaceship.cpp  spaceship.h  wall.cpp  wall.h
utilities/: asset_library.cpp  asset_library.h  collision_handler.cpp  collision_handler.h  game_manager.cpp  game_manager.h  input_handler.cpp  input_handler.h  lighting_component.h  mesh_component.h  object_loader.cpp  object_loader.h  object_register.cpp  object_register.h  particle_system.cpp  particle_system.h  texture_loader.h
